# amlb-streamlit

./: Dockerfile  app.py  docker-compose.yml  home.py  pareto.py  pyproject.toml  requirements.txt  sidebar.py
core/: visualization.py
html/: card.html
pages/: stability.py
reference/: _data_processing.py  _plotting.py  _scatter_plots.py  _widgets.py
src/: data_input.py  home.py  shiny.py
src/.streamlit/: config.toml
src/core/: data.py  ui.py
src/pages/: cd_diagram.py  inference.py  performance.py
src/reference/: _error_plot.py  _histogram.py
