[tool.poetry]
name = "automl-benchmark-app-frontend"
version = "0.0.1"
description = "Streamlit Analysis App for the AutoML Benchmark"
authors = ["Stefan Coors (mail@stefancoors.de)"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
loguru = "^0.7.2"
httpx = "^0.24.0"
python-json-logger = "^2.0.7"
envyaml = "^1.10.211231"
streamlit = "^1.26.0"
pandas = "==2.1.1"
numpy = "==1.26.0"
matplotlib = "^3.8.0"
requests = "^2.31.0"
#io = "==0.0.1"
seaborn = "^0.13.0"
streamlit-aggrid = "^0.3.4.post3"
altair = "^5.1.2"
streamlit-extras = "^0.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
python-dotenv = "^1.0.0"
ipykernel = "^6.25.1"

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
